--- a/lang/en.json
+++ b/lang/en.json
@@ -59,6 +59,7 @@
     "Day Schedules": "Day Schedules",
     "Day Scores and Game details": "Day Scores and Game details",
     "Day scores": "Day scores",
+    "Days Participated": "Days Participated",
     "Delete": "Delete",
     "Delete Account": "Delete Account",
     "Deleted": "Deleted",
@@ -83,6 +84,7 @@
     "Forum": "Forum",
     "Forum posts that changed since your last login": "Forum posts that changed since your last login",
     "Game": "Game",
+    "Games Won": "Games Won",
     "General overview": "General overview",
     "Google Play App": "Google Play App",
     "Has been opened": "Has been opened",
@@ -105,11 +107,11 @@
     "Log in": "Log in",
     "Log in or register": "Log in or register",
     "Managed by": "Managed by",
+    "Max Playing Days": "Max Playing Days",
     "Message deleted": "Message deleted",
     "Minus one game": "Minus one game",
     "Name": "Name",
     "Name of the Schedule": "Name of the Schedule",
-    "New": "New",
     "New Password": "New Password",
     "No dates can be changed": "No dates can be changed",
     "No games yet": "No games yet",
@@ -129,6 +131,9 @@
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Or add a new player",
     "Overview and Help": "Overview and Help",
+    "Overview of all players and users": "Overview of all players and users",
+    "Overview of all users": "Overview of all users",
+    "Overview of players": "Overview of players",
     "Page Expired": "Page Expired",
     "Participating Players": "Participating Players",
     "Participating Teams": "Participating Teams",
@@ -206,6 +211,7 @@
     "Toggle to make a captain": "Toggle to make a captain",
     "Toggle to make a regular player": "Toggle to make a regular player",
     "Too Many Requests": "Too Many Requests",
+    "Total Games": "Total Games",
     "Total games lost": "Total games lost",
     "Total games won": "Total games won",
     "Unauthorized": "Unauthorized",
@@ -254,6 +260,7 @@
     "contact your captain or bar owner": "contact your captain or bar owner",
     "created by": "created by",
     "day": "day",
+    "delete non-active players": "delete non-active players",
     "delete the date": "delete the date",
     "doubles": "doubles",
     "finished": "finished",
@@ -285,6 +292,5 @@
     "singles": "singles",
     "to": "to",
     "update team and players": "update team and players",
-    "users": "users",
     "week": "week"
 }
