--- a/lang/nl.json
+++ b/lang/nl.json
@@ -48,8 +48,8 @@
     "Current Password": "Huidig wachtwoord",
     "Current Team": "Huidig Team",
     "Current team": "Current team",
-    "Daily games lost": "Spellen gewonnen",
-    "Daily games won": "Spellen verloren",
+    "Daily games lost": "Wedstrijden gewonnen",
+    "Daily games won": "Wedstrijden verloren",
     "Dashboard": "Dashbord",
     "Date": "Datum",
     "Date overlaps": "Datum overlapt",
@@ -59,6 +59,7 @@
     "Day Schedules": "Dagroosters",
     "Day Scores and Game details": "Dagresultaten en wedstrijdgegevens",
     "Day scores": "Dagresultaten",
+    "Days Participated": "Deelgenomen dagen",
     "Delete": "Wis",
     "Delete Account": "Account verwijderen",
     "Deleted": "Gewist",
@@ -83,17 +84,18 @@
     "Forum": "Forum",
     "Forum posts that changed since your last login": "Forum posts gewijzigd sinds uw laatste login",
     "Game": "Spel",
+    "Games Won": "Gewonnen wedstrijden",
     "General overview": "Algemeen overzicht",
     "Google Play App": "Google Play App",
     "Has been opened": "Is geopend",
     "Hide comment": "Verberg commentaar",
     "Home": "Startpagina",
     "Home Team": "Thuisploeg",
-    "If you don't have the person's email, it is auto generated": "Als je het e-mailadres van de persoon niet hebt, wordt het automatisch gegenereerd",
-    "Individual Games and Results": "Individuele spelen en resultated",
+    "If you don't have the person's email, it is auto generated": "Een ongekend e-mailadres wordt automatisch gegenereerd",
+    "Individual Games and Results": "Individuele wedstrijden en resultaten",
     "Invite players": "Nodig spelers uit",
     "Is this room private": "Is deze ruimte privaat",
-    "Last game": "Laatste spel",
+    "Last game": "Laatste Wedstrijden",
     "Last played Team": "Laatst gespeelde team",
     "Last scores": "Laatste score",
     "Last update": "Laatste update",
@@ -105,14 +107,14 @@
     "Log in": "Aanmelden",
     "Log in or register": "Aanmelden of registreren",
     "Managed by": "Beheerd door",
+    "Max Playing Days": "Max Gespeelde Dagen",
     "Message deleted": "Bericht gewist",
-    "Minus one game": "Min één game",
+    "Minus one game": "Min één wedstrijd",
     "Name": "Naam",
     "Name of the Schedule": "Naam van het rooster",
-    "New": "New",
     "New Password": "Nieuw wachtwoord",
     "No dates can be changed": "Datums kunnen niet veranderd worden",
-    "No games yet": "Nog geen spelen",
+    "No games yet": "Nog geen wedstrijden",
     "No new posts or comments": "Geen nieuwe posts of commentaren",
     "No other public rooms": "Geen andere publieke ruimtes",
     "No private rooms": "Geen privé ruimtes",
@@ -121,14 +123,17 @@
     "No selected players in this team": "Geen spelers geselecteerd voor dit team",
     "Nobody yet": "Nog niemand",
     "Not Found": "Niet gevonden",
-    "Not in": "Not in",
+    "Not in": "Ongekend",
     "Not opened yet": "Nog niet geopend",
-    "Number of games participated": "Aantal wedstrijden gespeeld",
+    "Number of games participated": "Aantal gespeelde wedstrijden",
     "Number of participated playing dates": "Aantal deelgenomen speeldagen",
     "OUR BILLIARD RULES": "ONZE BILJARTREGELS",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Of voeg een nieuwe speler toe",
     "Overview and Help": "Overzicht en Hulp",
+    "Overview of all players and users": "Overzicht van alle spelers en gebruikers",
+    "Overview of all users": "Overzicht van alle gebruikers",
+    "Overview of players": "Overzicht van alle spelers",
     "Page Expired": "Pagina verlopen",
     "Participating Players": "Deelnemende Spelers",
     "Participating Teams": "Deelnemende teams",
@@ -138,7 +143,7 @@
     "Planned game for": "Geplande wedstrijd voor",
     "Playing date": "Speeldatum",
     "Plays at": "Speelt op",
-    "Please enter your password to confirm you would like to permanently delete your account.": "Please enter your password to confirm you would like to permanently delete your account.",
+    "Please enter your password to confirm you would like to permanently delete your account.": "Gelieve uw paswoord te bevestigen om het account permanent te verwijderen.",
     "Posted by": "Gepost door",
     "Previous schedules": "Vorige roosters",
     "Private Chat": "Private Chat",
@@ -198,22 +203,23 @@
     "The maximum allowed players has been reached!": "Het maximaal aantal toegestane spelers is bereikt!",
     "The players": "De spelers",
     "The team": "Het Team",
-    "There are no games yet": "Er zijn nog geen spelen",
+    "There are no games yet": "Er zijn nog geen wedstrijden",
     "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
     "This Season seems finished, missing (semi) finals": "Dit Seizoen lijkt over, zijn er missende (semi) finales",
     "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
     "Title": "Titel",
-    "Toggle to make a captain": "Schakel om tot kapitein te maken",
-    "Toggle to make a regular player": "Schakel om tot gewone speler te maken",
+    "Toggle to make a captain": "Maak kapitein",
+    "Toggle to make a regular player": "Maak speler",
     "Too Many Requests": "Te veel verzoeken",
-    "Total games lost": "Wedstrijdend verloren",
+    "Total Games": "Wedstrijden",
+    "Total games lost": "Wedstrijden verloren",
     "Total games won": "Wedstrijden gewonnen",
     "Unauthorized": "Ongeautoriseerd",
     "Upcoming schedules": "Aankomende roosters",
     "Update": "Bijwerken",
     "Update Password": "Wachtwoord bijwerken",
     "Update Season structure": "Seizoensstructuur bijwerken",
-    "Update post": "Werk post bij",
+    "Update post": "Bericht bijwerken",
     "Update the Calendar": "Kalender bijwerken",
     "Update the Season structure": "Seizoensstructuur bijwerken",
     "Update the current Calendar": "Huidige kalender bijwerken",
@@ -222,12 +228,12 @@
     "Update your account's profile information and email address.": "Werk de profielinformatie en het e-mailadres van je account bij.",
     "Updated": "Bijgewerkt",
     "User created and added to your team! A reminder has been sent with the login info.": "Gebruiker aangemaakt en toegevoegd aan je team! Een herinnering met inloggegevens is verzonden.",
-    "Venue": "Venue",
+    "Venue": "Locatie",
     "Visit": "Bezoek",
     "Visitor": "Bezoeker",
     "Visitors": "Bezoekers",
     "Website changelog": "Wijzigingslogboek website",
-    "What is your role in the current Season": "Wat is uw rol in het huidige Seizoen",
+    "What is your role in the current Season": "Wat is uw rol in het huidig Seizoen",
     "Write a new post": "Schrijf een bericht",
     "You are the Captain, you can": "Je bent de kapitain, u kan",
     "You can leave this empty if you don't have the number": "Je kunt dit leeg laten als je het nummer niet hebt",
@@ -236,7 +242,7 @@
     "You don't play for a team. If you think this is an error": "Je speelt voor geen team. Als dit een fout is",
     "You may leave this empty, except for bar owners and captains": "Ja mag dit leeglaten. Uitgezonderd voor kapiteinen en bareigenaren",
     "You play for": "Je speelt voor",
-    "Your Dashboard": "Jouw Dashboard",
+    "Your Dashboard": "Jouw Overzicht",
     "Your comment": "Jouw commentaar",
     "Your current": "Jouw huidige",
     "Your current position": "Jouw huidige positie",
@@ -254,15 +260,16 @@
     "contact your captain or bar owner": "contacteer jouw kapitein of bareigenaar",
     "created by": "gemaakt door",
     "day": "dag",
+    "delete non-active players": "wis niet-actieve spelers",
     "delete the date": "wis de dag",
     "doubles": "dubbels",
     "finished": "afgerond",
-    "games": "spelen",
-    "games participated": "meegewerkte spelen",
+    "games": "wedstrijden",
+    "games participated": "deelgenomen wedstrijden",
     "has a BYE": "heeft een BYE",
     "has no BYE": "heeft geen BYE",
     "hidden": "verborgen",
-    "if available": "if available",
+    "if available": "indien gekend",
     "if this is an error or a holiday": "indien een fout of feestdag",
     "individual rank is": "individuele rang is",
     "invited": "uitgenodigd",
@@ -285,6 +292,5 @@
     "singles": "singles",
     "to": "naar",
     "update team and players": "team en spelers aanpassen",
-    "users": "gebruikers",
     "week": "week"
 }
