added some translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -241,10 +241,10 @@
     "You don't have access to this page": "You don't have access to this page",
     "You don't play for a team. If you think this is an error": "You don't play for a team. If you think this is an error",
     "You may leave this empty, except for bar owners and captains": "You may leave this empty, except for bar owners and captains",
-    "You play for": "You play for",
     "Your Dashboard": "Your Dashboard",
+    "Your Team": "Your team",
     "Your comment": "Your comment",
-    "Your current": "Your current",
+    "Your current individual rank is": "Your current individual rank is",
     "Your current position": "Your current position",
     "Your email address is unverified.": "Your email address is unverified.",
     "Your favorite format is selected": "Your favorite format is selected",
@@ -271,8 +271,8 @@
     "hidden": "hidden",
     "if available": "if available",
     "if this is an error or a holiday": "if this is an error or a holiday",
-    "individual rank is": "individual rank is",
     "invited": "invited",
+    "is Captain": "is Captain",
     "last comment by": "last comment by",
     "manage your team here": "manage your team here",
     "no daily scores yet": "no daily scores yet",
