--- a/lang/nl.json
+++ b/lang/nl.json
@@ -241,10 +241,10 @@
     "You don't have access to this page": "U heeft geen toestemming tot deze pagina",
     "You don't play for a team. If you think this is an error": "Je speelt voor geen team. Als dit een fout is",
     "You may leave this empty, except for bar owners and captains": "Ja mag dit leeglaten. Uitgezonderd voor kapiteinen en bareigenaren",
-    "You play for": "Je speelt voor",
     "Your Dashboard": "Jouw Overzicht",
+    "Your Team": "Je speelt voor",
     "Your comment": "Jouw commentaar",
-    "Your current": "Jouw huidige",
+    "Your current individual rank is": "Jouw huidige individuele rang is",
     "Your current position": "Jouw huidige positie",
     "Your email address is unverified.": "Je e-mailadres is niet geverifieerd.",
     "Your favorite format is selected": "Je favoriete formaat is geselecteerd",
@@ -271,8 +271,8 @@
     "hidden": "verborgen",
     "if available": "indien gekend",
     "if this is an error or a holiday": "indien een fout of feestdag",
-    "individual rank is": "individuele rang is",
     "invited": "uitgenodigd",
+    "is Captain": "is Kapitein",
     "last comment by": "laatste commentaar door",
     "manage your team here": "beheer uw team hier",
     "no daily scores yet": "nog geen dagresultaten",
