language files update

--- a/lang/en.json
+++ b/lang/en.json
@@ -171,6 +171,7 @@
     "Scores": "Scores",
     "Season": "Season",
     "Season Structure": "Season Structure",
+    "Select a different format": "Select a different format",
     "Select a player from the users table": "Select a player from the users table",
     "Select another Season": "Select another Season",
     "Select venue": "Select venue",
@@ -247,7 +248,6 @@
     "Your current individual rank is": "Your current individual rank is",
     "Your current position": "Your current position",
     "Your email address is unverified.": "Your email address is unverified.",
-    "Your favorite format is selected": "Your favorite format is selected",
     "Your message": "Your message",
     "Your participation": "Your participation",
     "Your team members are": "Your team members are",
