--- a/lang/nl.json
+++ b/lang/nl.json
@@ -171,6 +171,7 @@
     "Scores": "Scores",
     "Season": "Seizoen",
     "Season Structure": "Seizoensstructuur",
+    "Select a different format": "Selecteer een ander formaat",
     "Select a player from the users table": "Selecteer een speler uit de gebruikerslijst",
     "Select another Season": "Selecteer een ander Seizoen",
     "Select venue": "Selecteer een venue",
@@ -247,7 +248,6 @@
     "Your current individual rank is": "Jouw huidige individuele rang is",
     "Your current position": "Jouw huidige positie",
     "Your email address is unverified.": "Je e-mailadres is niet geverifieerd.",
-    "Your favorite format is selected": "Je favoriete formaat is geselecteerd",
     "Your message": "Jouw bericht",
     "Your participation": "Jouw medewerking",
     "Your team members are": "Jouw medespelers zijn",
