Added some untranslatable strings to localization

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     "Actions": "Actions",
     "Add a comment": "Add a comment",
     "Add a player to the team": "Add a player to the team",
+    "Add another admin": "Add another admin",
     "Add one game": "Add one game",
     "Administration": "Administration",
     "All Seasons": "All Seasons",
@@ -21,6 +22,7 @@
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Calendar",
     "Calendar Creation": "Calendar Creation",
+    "Calendar, Schedule and Results": "Calendar, Schedule and Results",
     "Cancel": "Cancel",
     "Captain": "Captain",
     "Change a playing date": "Change a playing date",
@@ -30,8 +32,10 @@
     "Chat": "Chat",
     "Chat rooms": "Chat rooms",
     "Choose a day games format": "Choose a day games format",
+    "Claim an open user account": "Claim an open user account",
     "Claim your account": "Claim your account",
     "Click here to re-send the verification email.": "Click here to re-send the verification email.",
+    "Competition Results": "Competition Results",
     "Confirm": "Confirm",
     "Confirm Password": "Confirm Password",
     "Confirm the final score": "Confirm the final score",
@@ -43,8 +47,10 @@
     "Create a chat room": "Create a chat room",
     "Create a new Season": "Create a new Season",
     "Create a new Venue": "Create a new Venue",
+    "Create a new team": "Create a new team",
     "Create post": "Create post",
     "Create the new Room": "Create the new Room",
+    "Created by": "Created by",
     "Current Password": "Current Password",
     "Current Team": "Current Team",
     "Current team": "Current team",
@@ -66,11 +72,15 @@
     "Detailed schedules": "Detailed schedules",
     "Details of": "Details of",
     "Details of the venue": "Details of the venue",
+    "Do you want to remove this team? You can always add it again later": "Do you want to remove this team? You can always add it again later",
+    "Do you want to remove this user as an administrator?": "Do you want to remove this user as an administrator?",
     "Edit": "Edit",
+    "Edit the format's name and details": "Edit the format's name and details",
     "Edit the team": "Edit the team",
     "Edit the team players": "Edit the team players",
     "Edit the venue": "Edit the venue",
     "Edit the venue's details": "Edit the venue's details",
+    "Edit this player": "Edit this player",
     "Edit this venue": "Edit this venue",
     "Email": "Email",
     "Email the password reset link": "Email the password reset link",
@@ -82,16 +92,20 @@
     "Forgot your password?": "Forgot your password?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.",
     "Forum": "Forum",
+    "Forum Posts": "Forum Posts",
     "Forum posts that changed since your last login": "Forum posts that changed since your last login",
     "Game": "Game",
     "Games Won": "Games Won",
+    "Games schedule": "Games schedule",
     "General overview": "General overview",
     "Google Play App": "Google Play App",
     "Has been opened": "Has been opened",
     "Hide comment": "Hide comment",
+    "Hide some": "Hide some",
     "Home": "Home",
     "Home Team": "Home Team",
     "If you don't have the person's email, it is auto generated": "If you don't have the person's email, it is auto generated",
+    "Individual Games Won": "Individual Games Won",
     "Individual Games and Results": "Individual Games and Results",
     "Invite players": "Invite players",
     "Is this room private": "Is this room private",
@@ -152,6 +166,9 @@
     "Profile related": "Profile related",
     "Register": "Register",
     "Remember me": "Remember me",
+    "Remove this administrator": "Remove this administrator",
+    "Remove this player": "Remove this player",
+    "Remove this team": "Remove this team",
     "Remove this user from the chat? All related messages will be deleted too": "Remove this user from the chat? All related messages will be deleted too",
     "Resend Verification Email": "Resend Verification Email",
     "Reserve": "Reserve",
@@ -173,12 +190,14 @@
     "Season Structure": "Season Structure",
     "Select a different format": "Select a different format",
     "Select a player from the users table": "Select a player from the users table",
+    "Select a user": "Select a user",
     "Select another Season": "Select another Season",
     "Select venue": "Select venue",
     "Send": "Send",
     "Send emails to players": "Send emails to players",
     "Server Error": "Server Error",
     "Service Unavailable": "Service Unavailable",
+    "Show all": "Show all",
     "Show only the ###median### most active players": "Show only the ###median### most active players",
     "Show the list of ALL players": "Show the list of ALL players",
     "Show/Hide password": "Show/Hide password",
@@ -255,6 +274,7 @@
     "back to post": "back to post",
     "back to the forum": "back to the forum",
     "can only be changed by administrators": "can only be changed by administrators",
+    "click for details": "click for details",
     "click on a name to see the game details": "click on a name to see the game details",
     "columns": "columns",
     "contact your captain or bar owner": "contact your captain or bar owner",
@@ -263,6 +283,7 @@
     "delete non-active players": "delete non-active players",
     "delete the date": "delete the date",
     "doubles": "doubles",
+    "edit": "edit",
     "finished": "finished",
     "games": "games",
     "games participated": "games participated",
@@ -271,12 +292,15 @@
     "hidden": "hidden",
     "if available": "if available",
     "if this is an error or a holiday": "if this is an error or a holiday",
+    "individual games and results": "individual games and results",
     "invited": "invited",
     "is Captain": "is Captain",
     "last comment by": "last comment by",
     "manage your team here": "manage your team here",
     "no daily scores yet": "no daily scores yet",
+    "number of players": "number of players",
     "of": "of",
+    "on": "on",
     "on the": "on the",
     "pagination.next": "pagination.next",
     "pagination.previous": "pagination.previous",
