--- a/lang/nl.json
+++ b/lang/nl.json
@@ -7,8 +7,9 @@
     "Actions": "Acties",
     "Add a comment": "Voeg commentaar toe",
     "Add a player to the team": "Voeg een speler toe aan het team",
+    "Add another admin": "Voeg een admin toe",
     "Add one game": "Voeg een spel toe",
-    "Administration": "Administration",
+    "Administration": "Administratie",
     "All Seasons": "Alle Seizoenen",
     "All rights reserved.": "Alle rechten voorbehouden.",
     "Already registered?": "Al geregistreerd?",
@@ -21,6 +22,7 @@
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Kalender",
     "Calendar Creation": "Kalender aanmaken",
+    "Calendar, Schedule and Results": "Kalender, Dagschema en resultaten",
     "Cancel": "Annuleren",
     "Captain": "Kapitein",
     "Change a playing date": "Wijzig een speeldatum",
@@ -30,8 +32,10 @@
     "Chat": "Chat",
     "Chat rooms": "Chat rooms",
     "Choose a day games format": "Kies een dagwedstrijdformaat",
+    "Claim an open user account": "Claim een open user account",
     "Claim your account": "Claim uw account",
     "Click here to re-send the verification email.": "Klik hier om de verificatiemail opnieuw te verzenden.",
+    "Competition Results": "Competitie Resultaten",
     "Confirm": "Bevestigen",
     "Confirm Password": "Bevestig wachtwoord",
     "Confirm the final score": "Bevestig de eindscore",
@@ -43,8 +47,10 @@
     "Create a chat room": "Maak een niewe chat ruimte",
     "Create a new Season": "Een nieuw seizoen aanmaken",
     "Create a new Venue": "Een nieuwe locatie aanmaken",
+    "Create a new team": "Creëer een nieuw team",
     "Create post": "Schrijf een post",
     "Create the new Room": "Maak de nieuwe chat ruimte",
+    "Created by": "Gemaakt door",
     "Current Password": "Huidig wachtwoord",
     "Current Team": "Huidig Team",
     "Current team": "Current team",
@@ -66,11 +72,15 @@
     "Detailed schedules": "Gedetailleerde roosters",
     "Details of": "Details van",
     "Details of the venue": "Details van de bar",
+    "Do you want to remove this team? You can always add it again later": "Wil je dit team verwijderen? Je kan het altijd later terug invoegen",
+    "Do you want to remove this user as an administrator?": "Wil je deze administrator echt verwijderen?",
     "Edit": "Wijzig",
+    "Edit the format's name and details": "Wijzig de naam en details van het formaat",
     "Edit the team": "Edit the team",
     "Edit the team players": "Edit the team players",
     "Edit the venue": "Wijzig de bar",
     "Edit the venue's details": "Wijzig de details",
+    "Edit this player": "Wijzig deze speler",
     "Edit this venue": "Wijzig deze info",
     "Email": "E-mail",
     "Email the password reset link": "Stuur de link voor wachtwoordherstel per e-mail",
@@ -82,20 +92,24 @@
     "Forgot your password?": "Wachtwoord vergeten?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Wachtwoord vergeten? Geen probleem. Laat ons je e-mailadres weten en we sturen je een link om je wachtwoord te resetten.",
     "Forum": "Forum",
+    "Forum Posts": "Forum Posts",
     "Forum posts that changed since your last login": "Forum posts gewijzigd sinds uw laatste login",
     "Game": "Spel",
     "Games Won": "Gewonnen wedstrijden",
+    "Games schedule": "Spelschema",
     "General overview": "Algemeen overzicht",
     "Google Play App": "Google Play App",
     "Has been opened": "Is geopend",
     "Hide comment": "Verberg commentaar",
+    "Hide some": "Filter",
     "Home": "Startpagina",
     "Home Team": "Thuisploeg",
     "If you don't have the person's email, it is auto generated": "Een ongekend e-mailadres wordt automatisch gegenereerd",
-    "Individual Games and Results": "Individuele wedstrijden en resultaten",
+    "Individual Games Won": "Individuele gewonnen spelen",
+    "Individual Games and Results": "Individuele spelen en resultaten",
     "Invite players": "Nodig spelers uit",
     "Is this room private": "Is deze ruimte privaat",
-    "Last game": "Laatste Wedstrijden",
+    "Last game": "Laatste Spelen",
     "Last played Team": "Laatst gespeelde team",
     "Last scores": "Laatste score",
     "Last update": "Laatste update",
@@ -152,6 +166,9 @@
     "Profile related": "Profielgerelateerd",
     "Register": "Registreren",
     "Remember me": "Onthoud mij",
+    "Remove this administrator": "Verwijder deze administrator",
+    "Remove this player": "Verwijder deze speler",
+    "Remove this team": "Verwijder dit team",
     "Remove this user from the chat? All related messages will be deleted too": "Verban deze gebruiker? Alle gelinkte berichten worden ook verwijderd.",
     "Resend Verification Email": "Verificatiemail opnieuw verzenden",
     "Reserve": "Gereserveerd",
@@ -173,12 +190,14 @@
     "Season Structure": "Seizoensstructuur",
     "Select a different format": "Selecteer een ander formaat",
     "Select a player from the users table": "Selecteer een speler uit de gebruikerslijst",
+    "Select a user": "Selecteer een gebruiker",
     "Select another Season": "Selecteer een ander Seizoen",
     "Select venue": "Selecteer een venue",
     "Send": "Verstuur",
     "Send emails to players": "Stuur e-mails naar spelers",
     "Server Error": "Serverfout",
     "Service Unavailable": "Dienst niet beschikbaar",
+    "Show all": "Toon alles",
     "Show only the ###median### most active players": "Toon enkel de ###median### meest actieve spelers",
     "Show the list of ALL players": "Toon een overzicht van ALLE spelers",
     "Show/Hide password": "Toon/verberg paswoord",
@@ -255,6 +274,7 @@
     "back to post": "terug naar de post",
     "back to the forum": "terug naar het forum",
     "can only be changed by administrators": "kan alleen door een administrator aangepast worden",
+    "click for details": "click voor details",
     "click on a name to see the game details": "klik op de naam om de speeldetails te zien",
     "columns": "kolommen",
     "contact your captain or bar owner": "contacteer jouw kapitein of bareigenaar",
@@ -263,6 +283,7 @@
     "delete non-active players": "wis niet-actieve spelers",
     "delete the date": "wis de dag",
     "doubles": "dubbels",
+    "edit": "aanpassen",
     "finished": "afgerond",
     "games": "wedstrijden",
     "games participated": "deelgenomen wedstrijden",
@@ -271,12 +292,15 @@
     "hidden": "verborgen",
     "if available": "indien gekend",
     "if this is an error or a holiday": "indien een fout of feestdag",
+    "individual games and results": "individuele wedstrijden and resultaten",
     "invited": "uitgenodigd",
     "is Captain": "is Kapitein",
     "last comment by": "laatste commentaar door",
     "manage your team here": "beheer uw team hier",
     "no daily scores yet": "nog geen dagresultaten",
+    "number of players": "aantal spelers",
     "of": "van",
+    "on": "op",
     "on the": "op de",
     "pagination.next": "volgende",
     "pagination.previous": "vorige",
