Footer: localization added

--- a/lang/en.json
+++ b/lang/en.json
@@ -64,11 +64,13 @@
     "Day Schedule blueprint": "Day Schedule blueprint",
     "Day Schedules": "Day Schedules",
     "Day Scores and Game details": "Day Scores and Game details",
+    "Day schedule PDF download": "Day schedule PDF download",
     "Day scores": "Day scores",
     "Days Participated": "Days Participated",
     "Delete": "Delete",
     "Delete Account": "Delete Account",
     "Deleted": "Deleted",
+    "Designed for the Puerto Galera Billiard League": "Designed for the Puerto Galera Billiard League",
     "Detailed schedules": "Detailed schedules",
     "Details of": "Details of",
     "Details of the venue": "Details of the venue",
@@ -147,6 +149,7 @@
     "Overview and Help": "Overview and Help",
     "Overview of all players and users": "Overview of all players and users",
     "Overview of all users": "Overview of all users",
+    "Overview of our PG billiard rules": "Overview of our PG billiard rules",
     "Overview of players": "Overview of players",
     "Page Expired": "Page Expired",
     "Participating Players": "Participating Players",
@@ -160,6 +163,7 @@
     "Please enter your password to confirm you would like to permanently delete your account.": "Please enter your password to confirm you would like to permanently delete your account.",
     "Posted by": "Posted by",
     "Previous schedules": "Previous schedules",
+    "Privacy Policy": "Privacy Policy",
     "Private Chat": "Private Chat",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
@@ -174,6 +178,7 @@
     "Reserve": "Reserve",
     "Reset Password": "Reset Password",
     "Reset the schedule": "Reset the schedule",
+    "Reviewed": "Reviewed",
     "Room created": "Room created",
     "Room name": "Room name",
     "Room updated": "Room updated",
@@ -211,6 +216,7 @@
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
     "The Calendar": "The Calendar",
     "The Individual Ranking": "The Individual Ranking",
+    "The Original": "The Original",
     "The chat and rooms": "The chat and rooms",
     "The daily games of": "The daily games of",
     "The day scores overview": "The day scores overview",
@@ -222,11 +228,13 @@
     "The log file of all score changes": "The log file of all score changes",
     "The maximum allowed players has been reached!": "The maximum allowed players has been reached!",
     "The players": "The players",
+    "The source code can be found on GitHub": "The source code can be found on GitHub",
     "The team": "The team",
     "There are no games yet": "There are no games yet",
     "There are no players added to the team yet!": "There are no players added to the team yet!",
     "This Season seems finished, missing (semi) finals": "This Season seems finished, missing (semi) finals",
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
+    "This is an open source project build on Laravel, Livewire and Tailwind": "This is an open source project build on Laravel, Livewire and Tailwind",
     "Title": "Title",
     "Toggle to make a captain": "Toggle to make a captain",
     "Toggle to make a regular player": "Toggle to make a regular player",
