--- a/lang/nl.json
+++ b/lang/nl.json
@@ -64,11 +64,13 @@
     "Day Schedule blueprint": "Dagrooster sjabloon",
     "Day Schedules": "Dagroosters",
     "Day Scores and Game details": "Dagresultaten en wedstrijdgegevens",
+    "Day schedule PDF download": "PDF dagschema",
     "Day scores": "Dagresultaten",
     "Days Participated": "Deelgenomen dagen",
     "Delete": "Wis",
     "Delete Account": "Account verwijderen",
     "Deleted": "Gewist",
+    "Designed for the Puerto Galera Billiard League": "Gemaakt voor de Puerto Galera Billiard League",
     "Detailed schedules": "Gedetailleerde roosters",
     "Details of": "Details van",
     "Details of the venue": "Details van de bar",
@@ -147,6 +149,7 @@
     "Overview and Help": "Overzicht en Hulp",
     "Overview of all players and users": "Overzicht van alle spelers en gebruikers",
     "Overview of all users": "Overzicht van alle gebruikers",
+    "Overview of our PG billiard rules": "Overzicht van onze PG billiard regelmenten",
     "Overview of players": "Overzicht van alle spelers",
     "Page Expired": "Pagina verlopen",
     "Participating Players": "Deelnemende Spelers",
@@ -160,6 +163,7 @@
     "Please enter your password to confirm you would like to permanently delete your account.": "Gelieve uw paswoord te bevestigen om het account permanent te verwijderen.",
     "Posted by": "Gepost door",
     "Previous schedules": "Vorige roosters",
+    "Privacy Policy": "Privacy Policy",
     "Private Chat": "Private Chat",
     "Profile": "Profiel",
     "Profile Information": "Profielinformatie",
@@ -174,6 +178,7 @@
     "Reserve": "Gereserveerd",
     "Reset Password": "Wachtwoord resetten",
     "Reset the schedule": "Rooster resetten",
+    "Reviewed": "Herbekeken",
     "Room created": "Kamer gecreëerd",
     "Room name": "Naam kamer",
     "Room updated": "Kamer geüpdated",
@@ -211,6 +216,7 @@
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
     "The Calendar": "De Kalender",
     "The Individual Ranking": "De Individuele Ranglijst",
+    "The Original": "Het origineel",
     "The chat and rooms": "De chat en kamers",
     "The daily games of": "De dagelijkse wedstrijden van",
     "The day scores overview": "Overzicht van de dagresultaten",
@@ -222,11 +228,13 @@
     "The log file of all score changes": "Het logbestand met alle scorewijzigingen",
     "The maximum allowed players has been reached!": "Het maximaal aantal toegestane spelers is bereikt!",
     "The players": "De spelers",
+    "The source code can be found on GitHub": "De broncode staat op GitHub",
     "The team": "Het Team",
     "There are no games yet": "Er zijn nog geen wedstrijden",
     "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
     "This Season seems finished, missing (semi) finals": "Dit Seizoen lijkt over, zijn er missende (semi) finales",
     "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
+    "This is an open source project build on Laravel, Livewire and Tailwind": "Dit is een open source project gebouwd op Laravel, Livewire en Tailwind",
     "Title": "Titel",
     "Toggle to make a captain": "Maak kapitein",
     "Toggle to make a regular player": "Maak speler",
