NL JSON translation for help files: shortened some titles

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -71,7 +71,7 @@
     "Delete Account": "Account verwijderen",
     "Deleted": "Gewist",
     "Designed for the Puerto Galera Billiard League": "Gemaakt voor de Puerto Galera Billiard League",
-    "Detailed schedules": "Gedetailleerde roosters",
+    "Detailed schedules": "Score details",
     "Details of": "Details van",
     "Details of the venue": "Details van de bar",
     "Do you want to remove this team? You can always add it again later": "Wil je dit team verwijderen? Je kan het altijd later terug invoegen",
@@ -148,7 +148,7 @@
     "Or add a new player": "Of voeg een nieuwe speler toe",
     "Overview and Help": "Overzicht en Hulp",
     "Overview of all players and users": "Overzicht van alle spelers en gebruikers",
-    "Overview of all users": "Overzicht van alle gebruikers",
+    "Overview of all users": "Overzicht gebruikers",
     "Overview of our PG billiard rules": "Overzicht van onze PG billiard regelmenten",
     "Overview of players": "Overzicht van alle spelers",
     "Page Expired": "Pagina verlopen",
@@ -186,7 +186,7 @@
     "Saved": "Opgeslagen",
     "Schedules of the day": "Roosters van de dag",
     "Score": "Score",
-    "Score changes log file": "Logbestand scorewijzigingen",
+    "Score changes log file": "Logbestand scores",
     "Score updated": "Score bijgewerkt",
     "Scoreboard": "Scorebord",
     "Scoreboard explained": "Scorebord uitgelegd",
@@ -219,7 +219,7 @@
     "The Original": "Het origineel",
     "The chat and rooms": "De chat en kamers",
     "The daily games of": "De dagelijkse wedstrijden van",
-    "The day scores overview": "Overzicht van de dagresultaten",
+    "The day scores overview": "Dagresultaten",
     "The format is updated": "Het formaat is bijgewerkt",
     "The format used is": "Het gebruikte formaat is",
     "The format used is the": "Het gebruikte formaat is de",
@@ -260,7 +260,7 @@
     "Visit": "Bezoek",
     "Visitor": "Bezoeker",
     "Visitors": "Bezoekers",
-    "Website changelog": "Wijzigingslogboek website",
+    "Website changelog": "Wijzigingen website",
     "What is your role in the current Season": "Wat is uw rol in het huidig Seizoen",
     "Write a new post": "Schrijf een bericht",
     "You are the Captain, you can": "Je bent de kapitain, u kan",
