Update Dutch translation for "Privacy Policy" to "Privacyverklaring

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -163,7 +163,7 @@
     "Please enter your password to confirm you would like to permanently delete your account.": "Gelieve uw paswoord te bevestigen om het account permanent te verwijderen.",
     "Posted by": "Gepost door",
     "Previous schedules": "Vorige roosters",
-    "Privacy Policy": "Privacy Policy",
+    "Privacy Policy": "Privacyverklaring",
     "Private Chat": "Private Chat",
     "Profile": "Profiel",
     "Profile Information": "Profielinformatie",
